Fix header/nav alignment issue

--- a/styles.css
+++ b/styles.css
@@ -10,27 +10,44 @@ red - #ee5253
 
 * {
   border: 1px solid blue;
-}
-
-body {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
   font-family: Roboto, sans-serif;
 }
 
-nav {
-  background-color: #0fb9b1;
+header {
+  display: flex;
   justify-content: space-between;
-  background-size: cover;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 70px;
+  background-color: #0fb9b1;
+}
 
+header nav {
+  float: right;
+  vertical-align: middle;
 }
 
 html {
   background-image: url("./assets/burger-friends.jpg");
   background-size: cover;
-  display: flex;
 }
 
 section {
   background-color: rgba(225, 225, 225, .9);
   margin: 100px;
   padding: 50px;
+}
+
+main {
+  display: flex;
+}
+
+img{
+  width: 80px;
+  height: 80px;
 }
